Update Es6.java